--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit>=1.30.0
-numpy>=1.23
-pandas>=1.5
-arch>=5.6.0
-statsmodels>=0.14.0
-scipy>=1.10.0
-matplotlib>=3.7.0
+streamlit
+numpy
+pandas
+arch
+statsmodels
+scipy
+matplotlib
